--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>my name is david!!! </h1>
-    <h1>my name is david!!! </h1>
+    <h1>my name is david </h1>
     
 </body>
 </html>
