--- a/index.html
+++ b/index.html
@@ -1,14 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>my name is david!!! </h1>
-    <h1>my name is david </h1>
-    
-</body>
-</html>
+<html>
+    <head>
+        <title>HTML CHEAT SHEET</title>
+    </head>
+    <body>
+       <h1>heading 1</h1> 
+       <h2>heading 2</h1> 
+       <h3>heading 3</h1> 
+       <h4>heading 4</h1> 
+       <h5>heading 5</h1> 
+       <h>heading 6</h1>
+         <p>
+             Lorem ipsum dolor sit amet consectetur <strong>adipisicing elit. Excepturi, a impedit, perferendis </strong> reprehenderit obcaecati unde nemo iure perspiciatis ipsam omnis iste eos consequuntur dignissimos at. Asperiores aspernatur atque ipsum!
+         </p>
+         <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing <em>elit. Excepturi, a impedit, <a href="http://google.com" target="_blank">perferendis ullam reprehenderit </a>obcaecati unde</em> nemo iure perspiciatis ipsam omnis iste eos consequuntur dignissimos at. Asperiores aspernatur atque ipsum!
+        </p>
+        <ul>
+            <li>list item 1 </li>
+            <li>list item 2 </li>
+            <li>list item 3 </li>
+            <li>list item 4 </li>
+            <li>list item 5 </li>
+
+        </ul>
+        <ol>
+            <li>list item 1 </li>
+            <li>list item 1 </li>
+            <li>list item 1 </li>
+            <li>list item 1 </li>
+        </ol>
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>email</th>
+                    <th>Age</th>
+
+                </tr>
+            </thead>
+
+        
+            <tbody>
+                <tr>
+                    <td>moh ttoot</td>
+                    <td>Bradty@gamil.com</td>
+                    <td>35</td>
+                </tr>
+                <tr>
+                    <td>traversy</td>
+                    <td>traversy@gamil.com</td>
+                    <td>48</td>
+                </tr>
+
+                    <tr>
+                        <td>Brad traversy</td>
+                        <td>Bradtraversy@gamil.com</td>
+                        <td>45</td>
+                    </tr>
+            </tbody>
+        </table>
+
+        <form action="process.php" method="POST">
+            <label>FIRST NAME</label>
+            <input typer="text" name="first-name"
+
+        </form>
+    </body>
+</html> 
