--- a/index.html
+++ b/index.html
@@ -60,11 +60,52 @@
                     </tr>
             </tbody>
         </table>
+       
+        <br>
+        <hr>
+        <br>
+
 
         <form action="process.php" method="POST">
-            <label>FIRST NAME</label>
-            <input typer="text" name="first-name"
+            <div>
+                <label>FIRST NAME</label>
+                <input typer="text" name="firstname">
+            </div>
+            <br>
 
+            <div>
+                <label>LAST NAME</label>
+                <input typer="text" name="lastname">
+            </div>
+            <br>
+            <div>
+                <label>EMAIL</label>
+                <input typer="email" name="email">
+            </div>
+            <br>
+            <div>
+                <label>Message</label>
+                <textarea name="message"></textarea>
+            </div>
+            <br>
+            <div>
+                <label>Gender</label>
+                <select name="gender">
+                <option value="male">Male</option>
+                <option value="Female">Female</option>
+                <option value="other">other</option>
+                </select>
+            </div>
+            <br>
+            <div>
+                <label>Age</label>
+                <input type="number" name="age" value='30'>
+            </div>
+            <br>
+            <div>
+                <label>Birthday</label>
+                <input type="date" name="birthday">
+            </div>
         </form>
     </body>
 </html> 
