--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <form action="process.php" method="POST">
             <div>
                 <label>FIRST NAME</label>
-                <input typer="text" name="firstname">
+                <input typer="text" name="firstname" placeholder="Enter your first name">
             </div>
             <br>
 
@@ -106,6 +106,11 @@
                 <label>Birthday</label>
                 <input type="date" name="birthday">
             </div>
+            <input type="submit" name="submit" value="submit">
+
+
         </form>
+        <button>click me</button>
+        <img src="frozen.webp">
     </body>
 </html> 
