added new lines

--- a/index.html
+++ b/index.html
@@ -111,6 +111,25 @@
 
         </form>
         <button>click me</button>
-        <img src="frozen.webp">
+
+        <br>
+        <br>
+        <a href="frozen.web">
+        <img src="frozen.webp" alt="My samle image" width="200"  >
+        </a>
+        
+        <blockquote cite="google.com">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora amet quo enim dignissimos vitae impedit doloribus, atque nesciunt 
+            sed tenetur iusto! Sequi dolor natus, 
+            fugiat assumenda consequatur consequuntur incidunt illum!
+        </blockquote>
+
+        <p>the <abbr title="WORLD WIDE WEB">WWW</abbr> is awsome </p>
+
+        <P><cite>HTML CRASH COURSE BY</cite> Mohammad totonchy<n/P>
+
+
+        
+
     </body>
 </html> 
