--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>HTML CHEAT SHEET</title>
     </head>
     <body>
+        <a href="blog.html">go to blog</a>
        <h1>heading 1</h1> 
        <h2>heading 2</h1> 
        <h3>heading 3</h1> 
